[workspace]
members = [
  "learn_solana",
  "task02_anchor_vault/blueshift_anchor_vault/programs/*",
]
resolver = "2"

[workspace.dependencies]


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
