[workspace]
members = [
  "learn_solana",
  "task02_anchor_vault/blueshift_anchor_vault/programs/*",
  "task03_anchor_escrow/blueshift_anchor_escrow/programs/*",
]
resolver = "2"

[workspace.dependencies]


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
