[package]
name = "learn_solana"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
clap = { version = "4.5.54", features = ["derive"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json"] }

solana-client = "3.1.6"
solana-commitment-config = "3.1.0"
solana-sdk = "3.0.0"


spl-token-2022-interface = "2.1.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
